# rust-raytracing

./: .gitignore  Cargo.toml  scene.json
raytracer/: Cargo.toml
raytracer/src/: color.rs  lib.rs
raytracer/src/scene/: camera.rs  mod.rs  ray.rs
raytracer/src/shapes/: mod.rs  plane.rs  sphere.rs
src/: main.rs  window.rs
