[package]
name = "raytrace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
glium = "0.32.1"
image = { version = "0.24.2", default-features = false, features = ["png"] }
raytracer = { path = "./raytracer" }
