[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
nalgebra = "0.31.1"
image = { version = "0.24.2", default-features = false, features = ["png"] }
serde = { version = "1.0.144", optional = true, features = ["derive"] }
fastrand = "1.8.0"
rayon = "1.5.3"

[features]
default = ["serde"]
serde = ["dep:serde", "nalgebra/serde-serialize"]
